# stock-quant

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CI_SETUP_GUIDE.md  DEVELOPMENT_WORKFLOW.md  README.md  backtest_analysis.py  backtest_simplified.py  check_optimization_results.py  completion_summary.md  csi1000_analysis_report.md  final_summary.md  full_optimization_pipeline.py  optimization_backtest.py  param_optimizer.py  project_structure_detailed.md  pyproject.toml  quant_analysis.py  quant_analysis_plan.md  quant_analysis_v2.py  run_backtest_fixed.py  run_optimization.sh  stage2_optimization_simple.py  stage2_risk_optimization.py  stock_quant_project_structure.md  test_stage2_simple.py
.coco/skills/coding-agent/: SKILL.md
.github/workflows/: ci.yml
.trae/skills/claude-memory/: SKILL.md
config/: default.yaml
examples/: basic_usage.py
memory/: 2026-02-28.md
src/stock_quant/: __init__.py
src/stock_quant/cli/: main.py
src/stock_quant/config/: config_loader.py
src/stock_quant/core/: base.py  data_fetcher.py  data_processor.py  indicator_calculator.py  signal_generator.py
src/stock_quant/core/data_sources/: akshare_adapter.py  base.py
src/stock_quant/period/: config_manager.py  period_manager.py
src/stock_quant/plugins/: base.py  manager.py  registry.py
src/stock_quant/plugins/indicators/: __init__.py  bollinger_bands.py  momentum_indicators.py  moving_average.py  rsi_indicator.py
src/stock_quant/plugins/strategies/: __init__.py  backtest_strategy.py  ma_cross_strategy.py  macd_strategy.py  optimization_strategy.py  rsi_strategy.py
src/stock_quant/utils/: exceptions.py  formatter.py  logger.py
tests/: test_indicators.py
tests/integration/: test_data_pipeline.py
tests/performance/: test_batch_processing.py
tests/unit/: test_data_fetcher.py  test_formatter.py  test_plugins.py
